--- a/settings_sbatch.ini
+++ b/settings_sbatch.ini
@@ -7,7 +7,7 @@ MPI_arguments    =
 [job]
 # List (space-separated) of variables that need to be passed to LAMMPS
 required_equi_vars = initial_data epp eps cps T_RT seed
-required_gcmc_vars = epp eps cps T_RT seed sol_height p r
+required_gcmc_vars = epp eps cps T_RT seed sol_height mu p r
 
 [gcmc_vars]
 cps = 2.5
@@ -15,6 +15,7 @@ T_RT = 0.85
 seed = 334232
 sol_height = 20
 r = 9000000
+mu = 0
 p = 0.01384
 
 [gcmc_dyn_vars]
