Add variable for equi data

--- a/settings_sbatch.ini
+++ b/settings_sbatch.ini
@@ -9,6 +9,7 @@ MPI_arguments    =
 required_gcmc_vars = epp eps cps T_RT seed sol_height mu p r
 
 [gcmc_vars]
+equi_data = data.equi_gd0.25.gz
 cps = 2.5
 T_RT = 0.85
 seed = 334232
