--- a/settings.ini.example
+++ b/settings.ini.example
@@ -6,22 +6,14 @@ MPI_arguments =
 
 [job]
 # List (space-separated) of variables that need to be passed to LAMMPS
-required_gcmc_vars = epp eps cps T_RT seed sol_height mu p r
+required_vars =
 slurm_sbatch_args = sbatch
-input_file = gcmc.in
-log_file = gcmc.log
+input_file = 
+log_file = 
 
-[gcmc_vars]
-equi_data = data.equi_gd0.25.gz
-cps = 2.5
-T_RT = 0.85
-seed = 334232
-sol_height = 20
-r = 12000000
-mu = 0
-p = 0.01384
+[static_vars]
+initial_data_file =
 
-[gcmc_dyn_vars]
+[dyn_vars]
 # List (space-separated) of variables that are varied
-epp = 0.6 1.0 1.4 1.8
-eps = 0.2 0.4 0.6 0.8 1.0 1.2 1.4 1.6
+
